--- a/website/css/main.css
+++ b/website/css/main.css
@@ -5,24 +5,11 @@
    ========================================================================== */
 
 body {
-	background: #1e1e1e;
+	background: #ffffff;
 }
 
 #auth0-logout {
 	display: none;
-}
-
-#user-profile {
-	display: none;
-}
-
-#profilepicture {
-	height: 20px;
-	width: 20px;
-}
-
-.jumbotron {
-	margin-bottom: 0;
 }
 
 #hero img {
@@ -31,10 +18,16 @@ body {
 	margin-right: 30px;
 }
 
-#upload-video-button {
-	display: none;
+#image-list-container {
+	text-align: center;
+	padding: 30px 0 30px;
+}
+
+#upload-image-button {
+	/*display: none; */
 	margin-bottom: 30px;
 }
+
 
 .btn-file {
 	position: relative;
@@ -65,67 +58,13 @@ body {
 	background: #fff;
 }
 
-#video-list-container {
-	text-align: center;
-	padding: 30px 0 30px;
-}
-
 .progress {
 	background: #1a1a1a;
 	margin-top: 6px;
 	margin-bottom: 36px;
 }
 
-#video-template {
-	display: none;
-}
 
-.video-card {
-	background-color: #000;
-	padding: 20px 10px 20px 10px;
-	box-shadow: #111 1px 1px 10px;
-	margin-bottom: 30px;
-	height: 215px;
-	cursor: pointer;
-}
-
-.video-card video {
-	height: 170px;
-}
-
-.transcoding-indicator object {
-	margin-top: 30px;
-}
-
-#loading-indicator {
-	margin: 90px auto;
-	display: block;
-}
-
-.video-playing {
-	position: fixed;
-	display: table;
-	left: 0;
-	right: 0;
-	top: 0;
-	bottom: 0;
-	width: 100%;
-	height: 100%;
-	z-index: 999;
-	background: rgba(0,0,0,0.9);
-}
-
-.video-playing .video-card {
-	display: table-cell;
-	text-align: center;
-	vertical-align: middle;
-	height: auto !important;
-	background: none;
-}
-
-.video-playing .video-card video {
-	height: 50%;
-}
 
 nav {
 	z-index: 997 !important;
